tests/ui/parser/issue-39616.stderr
error: expected type, found `0`
  --> $DIR/issue-39616.rs:1:12
   |
LL | fn foo(a: [0; 1]) {}
   |            ^ expected type

error: aborting due to previous error

